# dyros_pcv_calibration

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: check_time_sync.m  find_time_sync.m  plot_aruco.m  plot_joint_dot.m  plot_joint_steer.m  plot_mocap.m  plot_mocap_dot.m  plot_mocap_xy.m  test.m
data/aruco/: aruco_2022_01_26_5.csv  aruco_2022_01_26_7.csv  aruco_2022_01_26_8.csv  aruco_2022_01_26_9.csv
data/joint/: joint_debug_2022_02_28_0.txt  joint_debug_2022_02_28_1.txt  joint_debug_2022_02_28_2.txt  joint_debug_2022_02_28_3.txt  joint_debug_2022_03_04_4.txt  joint_debug_2022_03_04_5.txt  joint_debug_2022_03_04_6.txt  joint_debug_2022_03_04_7.txt  joint_debug_2022_03_07_21.txt  joint_debug_2022_03_07_22.txt  joint_debug_2022_03_07_23.txt  joint_debug_2022_03_07_24.txt  joint_debug_2022_03_07_25.txt
data/mocap/: equal_mocap_2022_01_28_0.txt  equal_mocap_2022_01_28_1.txt  equal_mocap_2022_01_28_2.txt  equal_mocap_2022_01_28_3.txt  equal_mocap_2022_02_28_0.txt  equal_mocap_2022_02_28_1.txt  equal_mocap_2022_02_28_2.txt  equal_mocap_2022_02_28_3.txt  equal_mocap_2022_03_07_0.txt  equal_mocap_2022_03_07_1.txt  equal_mocap_2022_03_07_2.txt  equal_mocap_2022_03_07_3.txt  mocap_2022_01_28_0.txt  set1-0.txt  (+14 more)
script/: auto_sim_validifier.py  calibrate_pcv.py  equal_space_mocap.py  plot_data.py  save_aruco_topic.py  simulate_pcv.py
setting/: mocap_11.yaml  mocap_12.yaml  mocap_13.yaml  mocap_14.yaml  mocap_21.yaml  mocap_22.yaml  mocap_23.yaml  mocap_24.yaml  mocap_25.yaml  simulation_0.yaml  simulation_1.yaml  simulation_2.yaml  validate_calibration.yaml
(+143 files in other folders)
